tests/invalid/syntax_errors/malformed_expressions.tj
# Malformed Expressions

def bad_arithmetic() -> int {
    # Missing operands
    x: int = +
    y: int = 5 *
    z: int = / 10
    
    # Invalid operators
    a: int = 5 ** 2  # Should be ^
    b: int = 10 // 3  # Invalid operator
    
    return x + y + z + a + b
}

def bad_function_call() -> int {
    # Missing arguments
    x: int = add()
    y: int = add(5)
    z: int = add(5, )
    
    return x + y + z
}

def bad_array_access() -> int {
    arr: [int] = [1, 2, 3]
    # Missing index
    x: int = arr[]
    # Invalid index
    y: int = arr[1, 2]
    
    return x + y
}
